# csgg-example

./: CsgG.ipynb  README.md  pyproject.toml
